--- a/precip_erainterim_correction_gpcp/make_daily_precips.ipynb
+++ b/precip_erainterim_correction_gpcp/make_daily_precips.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,56 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working on year 1979\n",
-      "working on year 1980\n",
-      "working on year 1981\n",
-      "working on year 1982\n",
-      "working on year 1983\n",
-      "working on year 1984\n",
-      "working on year 1985\n",
-      "working on year 1986\n",
-      "working on year 1987\n",
-      "working on year 1988\n",
-      "working on year 1989\n",
-      "working on year 1990\n",
-      "working on year 1991\n",
-      "working on year 1992\n",
-      "working on year 1993\n",
-      "working on year 1994\n",
-      "working on year 1995\n",
-      "working on year 1996\n",
-      "working on year 1997\n",
-      "working on year 1998\n",
-      "working on year 1999\n",
-      "working on year 2000\n",
-      "working on year 2001\n",
-      "working on year 2002\n",
-      "working on year 2003\n",
-      "working on year 2004\n",
-      "working on year 2005\n",
-      "working on year 2006\n",
-      "working on year 2007\n",
-      "working on year 2008\n",
-      "working on year 2009\n",
-      "working on year 2010\n",
-      "working on year 2011\n",
-      "working on year 2012\n",
-      "working on year 2013\n",
-      "working on year 2014\n",
-      "working on year 2015\n",
-      "working on year 2016\n",
-      "working on year 2017\n",
-      "working on year 2018\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in np.arange(1979,2018+1):\n",
     "    print(f'working on year {year}')\n",
@@ -120,37 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>&lt;xarray.Dataset&gt;\n",
-       "Dimensions:  (lat: 256, lon: 512, time: 365)\n",
-       "Coordinates:\n",
-       "  * lat      (lat) float64 89.46 88.77 88.07 87.37 ... -88.07 -88.77 -89.46\n",
-       "  * lon      (lon) float64 0.0 0.7031 1.406 2.109 ... 357.2 357.9 358.6 359.3\n",
-       "  * time     (time) float64 3.724e+09 3.724e+09 ... 3.755e+09 3.755e+09\n",
-       "Data variables:\n",
-       "    precip   (time, lat, lon) float64 5.298e-06 5.314e-06 ... 3.091e-07</pre>"
-      ],
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:  (lat: 256, lon: 512, time: 365)\n",
-       "Coordinates:\n",
-       "  * lat      (lat) float64 89.46 88.77 88.07 87.37 ... -88.07 -88.77 -89.46\n",
-       "  * lon      (lon) float64 0.0 0.7031 1.406 2.109 ... 357.2 357.9 358.6 359.3\n",
-       "  * time     (time) float64 3.724e+09 3.724e+09 ... 3.755e+09 3.755e+09\n",
-       "Data variables:\n",
-       "    precip   (time, lat, lon) float64 5.298e-06 5.314e-06 ... 3.091e-07"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds_daily"
    ]
@@ -165,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Analysis",
+   "display_name": "Py3Ana",
    "language": "python",
    "name": "analysis"
   },
@@ -179,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
