--- a/precip_erainterim_correction_gpcp/correcting_precip.ipynb
+++ b/precip_erainterim_correction_gpcp/correcting_precip.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpcpdir = '/Users/raphael/STORAGE/GPCP2.3/'\n",
+    "gpcpdir = './'\n",
     "gpcp = xr.open_dataset(gpcpdir + 'precip.mon.mean.nc')"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "erai_dir = '/Volumes/L4/ERAinterim/nc_daily/'"
+    "erai_dir = '/archive/Raphael.Dussin/ERAinterim/nc_daily'"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "lon_bnds = np.concatenate((np.array([lon[0] -0.5 * 0.7031]), 0.5 * (lon[:-1] + lon[1:]), np.array([lon[-1] + 0.5 * 0.7031])), axis=0)\n",
     "\n",
     "lat = erai_grid['lat'].values\n",
-    "lat_bnds = np.concatenate((np.array([90]), 0.5 * (lat[:-1] + lat[1:]), np.array([-90])), axis=0)\n",
+    "lat_bnds = np.concatenate((np.array([-90]), 0.5 * (lat[:-1] + lat[1:]), np.array([90])), axis=0)\n",
     "\n",
     "erai_grid['lon_b'] = xr.DataArray(data=lon_bnds, dims=('lonp1'))\n",
     "erai_grid['lat_b'] = xr.DataArray(data=lat_bnds, dims=('latp1'))"
@@ -165,7 +165,7 @@
    "source": [
     "gpcp_regridded = xr.Dataset()\n",
     "gpcp_regridded['precip'] = gpcp_precip_interp\n",
-    "gpcp_regridded.to_netcdf('/Volumes/L4/GPCP_v2.3_256x512.nc')"
+    "gpcp_regridded.to_netcdf('./GPCP_v2.3_256x512.nc')"
    ]
   },
   {
@@ -199,9 +199,7 @@
     "\n",
     "def normalize_cumulated_precip(da):\n",
     "    # normalize to the last value\n",
-    "    #print(da.isel(time=-1).min())\n",
     "    norm = da.isel(time=-1).clip(min=1e-15)\n",
-    "    #print(norm.min().values)\n",
     "    da_scaled = da / norm\n",
     "    return da_scaled\n",
     "\n",
@@ -248,7 +246,7 @@
     "    ds_out = xr.zeros_like(ds_erai)\n",
     "    for month in range(12):\n",
     "        cmonth = str(month+1).zfill(2)\n",
-    "        data_month = ds_erai['precip'].sel(time=f'{current_year}-{cmonth}')\n",
+    "        data_month = ds_erai['rain'].sel(time=f'{current_year}-{cmonth}')\n",
     "        ndays = len(data_month.time)\n",
     "        #print(data_month.time)\n",
     "        cumul = cumul_precip(data_month.clip(min=0))\n",
@@ -261,7 +259,7 @@
     "            da_out = new_data_month.copy()\n",
     "        else:\n",
     "            da_out = xr.concat([da_out, new_data_month], dim='time')\n",
-    "    ds_out['precip'] = da_out\n",
+    "    ds_out['rain'] = da_out\n",
     "    return ds_out"
    ]
   },
@@ -271,54 +269,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dask.distributed import Client, LocalCluster\n",
-    "cluster = LocalCluster()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = Client(cluster)\n",
-    "client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outdir = '/Volumes/L4/ERAinterim/corrected_precips/'\n",
+    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP'\n",
     "encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
-    "            'lat': {'_FillValue': 1e+36}, 'precip': {'_FillValue': 1e+36}}\n",
+    "            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
     "\n",
     "for year in np.arange(1979,2018+1):\n",
-    "    ds = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
+    "    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
+    "    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
+    "    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
     "    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
-    "    ds_corrected = process_one_year(ds, gpcp_precip_interp)\n",
+    "    ds_corrected = process_one_year(rain, gpcp_precip_interp)\n",
     "    ds_corrected['time'] = ds_time['time']\n",
-    "    ds_corrected['precip'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
-    "    ds_corrected.to_netcdf(f'{outdir}/precip_Dussin_corrected_{year}_daily.nc', encoding=encoding)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.close()"
+    "    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily.nc', encoding=encoding)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3Ana",
+   "display_name": "Py3-repro4",
    "language": "python",
-   "name": "analysis"
+   "name": "repro"
   },
   "language_info": {
    "codemirror_mode": {
@@ -330,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
