--- a/precip_erainterim_correction_gpcp/make_daily_precips.ipynb
+++ b/precip_erainterim_correction_gpcp/make_daily_precips.ipynb
@@ -19,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirnc_3h = '/Volumes/L4/ERAinterim/nc/'\n",
-    "dirnc_daily = '/Volumes/L4/ERAinterim/nc_daily/'"
+    "dirnc_3h = '/archive/Raphael.Dussin/ERAinterim/originals/'\n",
+    "dirnc_daily = '/archive/Raphael.Dussin/ERAinterim/nc_daily/'"
    ]
   },
   {
@@ -29,22 +29,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_daily_average(ds):\n",
+    "def make_daily_average(ds, varout=\"precip\", varERA='TP'):\n",
     "    \"\"\" compute daily average from 3 hours cumulative\"\"\"\n",
     "    grp = ds.groupby(ds.time.dt.hour)\n",
     "    midnight = grp.groups[0]\n",
     "    noon = grp.groups[12]\n",
     "    ds.load()\n",
     "    daily_avg = xr.Dataset()\n",
-    "    # geo coordinates\n",
+    "    # geo coordinates/ flip north up\n",
     "    daily_avg['lon'] = ds['lon']\n",
-    "    daily_avg['lat'] = ds['lat']\n",
+    "    daily_avg['lat'] = ds['lat'][::-1]\n",
     "    # daily precip\n",
     "    rho_w = 1000  # kg.m-3\n",
     "    seconds_per_day = 86400 # s.day-1\n",
     "    # kg.m-2.s-1 = kg.m-3 * m.day-1 / s.day-1\n",
-    "    precip = rho_w * (ds.TP.isel(time=midnight).values + ds.TP.isel(time=noon)).values / seconds_per_day\n",
-    "    daily_avg['precip'] = xr.DataArray(data=precip, dims=['time', 'lat', 'lon'])\n",
+    "    precip = rho_w * (ds[varERA].isel(time=midnight).values + ds[varERA].isel(time=noon)).values / seconds_per_day\n",
+    "    daily_avg[varout] = xr.DataArray(data=precip[:,::-1,:], dims=['time', 'lat', 'lon'])\n",
     "    # new time axis\n",
     "    year = ds.time[0].dt.year.values\n",
     "    ndays = len(ds.time) / 8.\n",
@@ -77,22 +77,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_daily"
+    "for year in np.arange(1979,2018+1):\n",
+    "    print(f'working on year {year}')\n",
+    "    ds = xr.open_dataset(f'{dirnc_3h}/snow_ERAinterim_{year}.nc')\n",
+    "    ds_daily = make_daily_average(ds, varout='snow', varERA='SF')\n",
+    "    ds_daily.to_netcdf(f'{dirnc_daily}/snow_ERAinterim_{year}_daily.nc')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3Ana",
+   "display_name": "Py3-repro4",
    "language": "python",
-   "name": "analysis"
+   "name": "repro"
   },
   "language_info": {
    "codemirror_mode": {
@@ -104,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
