fix to corrected precips, evaluation

--- a/precip_erainterim_correction_gpcp/correcting_precip.ipynb
+++ b/precip_erainterim_correction_gpcp/correcting_precip.ipynb
@@ -246,9 +246,9 @@
     "    ds_out = xr.zeros_like(ds_erai)\n",
     "    for month in range(12):\n",
     "        cmonth = str(month+1).zfill(2)\n",
-    "        data_month = ds_erai['rain'].sel(time=f'{current_year}-{cmonth}')\n",
+    "        #data_month = ds_erai['rain'].sel(time=f'{current_year}-{cmonth}')\n",
+    "        data_month = ds_erai['precip'].sel(time=f'{current_year}-{cmonth}')\n",
     "        ndays = len(data_month.time)\n",
-    "        #print(data_month.time)\n",
     "        cumul = cumul_precip(data_month.clip(min=0))\n",
     "        cumul_normed = normalize_cumulated_precip(cumul)\n",
     "        new_total = da_gpcp.sel(time=f'{current_year}-{cmonth}').values.squeeze()\n",
@@ -259,7 +259,8 @@
     "            da_out = new_data_month.copy()\n",
     "        else:\n",
     "            da_out = xr.concat([da_out, new_data_month], dim='time')\n",
-    "    ds_out['rain'] = da_out\n",
+    "    #ds_out['rain'] = da_out\n",
+    "    ds_out['precip'] = da_out\n",
     "    return ds_out"
    ]
   },
@@ -269,19 +270,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP'\n",
+    "# this was the unfortunate result of a wrong interpretation of GPCP data\n",
+    "# being rain only, thanks PSL https://psl.noaa.gov/data/gridded/data.gpcp.html\n",
+    "# IT IS rain+snow!!\n",
+    "\n",
+    "#outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP'\n",
+    "#encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
+    "#            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
+    "\n",
+    "#for year in np.arange(1979,2018+1):\n",
+    "#    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
+    "#    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
+    "#    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
+    "#    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
+    "#    ds_corrected = process_one_year(rain, gpcp_precip_interp)\n",
+    "#    ds_corrected['time'] = ds_time['time']\n",
+    "#    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "#    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily.nc', encoding=encoding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP_v2'\n",
     "encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
     "            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
+    "\n",
+    "encoding2 = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
+    "            'lat': {'_FillValue': 1e+36}, 'precip': {'_FillValue': 1e+36}}\n",
     "\n",
     "for year in np.arange(1979,2018+1):\n",
     "    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
     "    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
-    "    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
+    "    precip_corrected = process_one_year(precip, gpcp_precip_interp)\n",
+    "    # remove snow from ERAinterim to get corrected rainfall\n",
+    "    rain_corrected = (precip_corrected['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
     "    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
-    "    ds_corrected = process_one_year(rain, gpcp_precip_interp)\n",
-    "    ds_corrected['time'] = ds_time['time']\n",
-    "    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
-    "    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily.nc', encoding=encoding)"
+    "    precip_corrected['time'] = ds_time['time']\n",
+    "    precip_corrected[\"precip\"].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    precip_corrected.to_netcdf(f'{outdir}/precip_Dussin_corrected_{year}_daily.nc',\n",
+    "                               format='NETCDF3_64BIT', encoding=encoding2)\n",
+    "    \n",
+    "    rain_corrected['time'] = ds_time['time']\n",
+    "    rain_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    rain_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily.nc',\n",
+    "                             format='NETCDF3_64BIT', encoding=encoding)"
    ]
   }
  ],
