--- a/precip_erainterim_correction_gpcp/correcting_precip_degrad.ipynb
+++ b/precip_erainterim_correction_gpcp/correcting_precip_degrad.ipynb
@@ -488,7 +488,7 @@
     "    ds_out = xr.zeros_like(ds_erai)\n",
     "    for month in range(12):\n",
     "        cmonth = str(month+1).zfill(2)\n",
-    "        data_month = ds_erai['rain'].sel(time=f'{current_year}-{cmonth}')\n",
+    "        data_month = ds_erai['precip'].sel(time=f'{current_year}-{cmonth}')\n",
     "        ndays = len(data_month.time)\n",
     "        #print(data_month.time)\n",
     "        cumul = cumul_precip(data_month.clip(min=0))\n",
@@ -501,29 +501,8 @@
     "            da_out = new_data_month.copy()\n",
     "        else:\n",
     "            da_out = xr.concat([da_out, new_data_month], dim='time')\n",
-    "    ds_out['rain'] = da_out\n",
+    "    ds_out['precip'] = da_out\n",
     "    return ds_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP'\n",
-    "encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
-    "            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
-    "\n",
-    "for year in np.arange(1979,2018+1):\n",
-    "    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
-    "    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
-    "    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
-    "    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
-    "    ds_corrected = process_one_year(rain, gpcp_precip_interp)\n",
-    "    ds_corrected['time'] = ds_time['time']\n",
-    "    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
-    "    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily.nc', encoding=encoding)"
    ]
   },
   {
@@ -546,19 +525,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP_sens_5x'\n",
+    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP_v2_sens_5x'\n",
     "encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
     "            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
+    "\n",
+    "encoding2 = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
+    "            'lat': {'_FillValue': 1e+36}, 'precip': {'_FillValue': 1e+36}}\n",
     "\n",
     "for year in np.arange(1979,2018+1):\n",
     "    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
     "    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
-    "    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
+    "    precip_corrected = process_one_year(precip, gpcp5x_precip_interp)\n",
+    "    # remove snow from ERAinterim to get corrected rainfall\n",
+    "    rain_corrected = (precip_corrected['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
     "    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
-    "    ds_corrected = process_one_year(rain, gpcp5x_precip_interp)\n",
-    "    ds_corrected['time'] = ds_time['time']\n",
-    "    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
-    "    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily_GPCP5X.nc', encoding=encoding)"
+    "    precip_corrected['time'] = ds_time['time']\n",
+    "    precip_corrected[\"precip\"].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    precip_corrected.to_netcdf(f'{outdir}/precip_Dussin_corrected_{year}_daily_GPCP5X.nc',\n",
+    "                               format='NETCDF3_64BIT', encoding=encoding2)\n",
+    "    \n",
+    "    rain_corrected['time'] = ds_time['time']\n",
+    "    rain_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    rain_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily_GPCP5X.nc',\n",
+    "                             format='NETCDF3_64BIT', encoding=encoding)"
    ]
   },
   {
@@ -579,14 +568,14 @@
     "    print(current_year)\n",
     "    ds_out = xr.zeros_like(ds_erai)\n",
     "    # cumul all year\n",
-    "    cumul = cumul_precip(ds_erai[\"rain\"].clip(min=0))\n",
+    "    cumul = cumul_precip(ds_erai[\"precip\"].clip(min=0))\n",
     "    cumul_normed = normalize_cumulated_precip(cumul)\n",
     "    new_total = da_gpcp.sel(time=current_year).values.squeeze()\n",
     "    ndays = 366 if calendar.isleap(current_year) else 365\n",
     "    new_total = new_total * ndays / 1000\n",
     "    ny, nx = new_total.shape\n",
     "    new_data = decumul_precip(cumul_normed.transpose(*('time', 'lat', 'lon')) * new_total) * 1000 / 86400 # kg.m-2.s-1\n",
-    "    ds_out['rain'] = new_data\n",
+    "    ds_out['precip'] = new_data\n",
     "    return ds_out"
    ]
   },
@@ -596,19 +585,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP_sens_1y'\n",
+    "outdir = '/archive/Raphael.Dussin/ERAinterim/blend_GPCP_v2_sens_1y'\n",
     "encoding = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
     "            'lat': {'_FillValue': 1e+36}, 'rain': {'_FillValue': 1e+36}}\n",
+    "\n",
+    "encoding2 = {'time': {'_FillValue': 0}, 'lon': {'_FillValue': 1e+36},\n",
+    "            'lat': {'_FillValue': 1e+36}, 'precip': {'_FillValue': 1e+36}}\n",
     "\n",
     "for year in np.arange(1979,2018+1):\n",
     "    precip = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc')\n",
     "    snow = xr.open_dataset(f'{erai_dir}/snow_ERAinterim_{year}_daily.nc')\n",
-    "    rain = (precip['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
+    "    precip_corrected = process_one_year_from_annual(precip, GPCP_annual_interp)\n",
+    "    # remove snow from ERAinterim to get corrected rainfall\n",
+    "    rain_corrected = (precip_corrected['precip'] - snow[\"snow\"]).clip(min=0).to_dataset(name='rain')\n",
     "    ds_time = xr.open_dataset(f'{erai_dir}/precip_ERAinterim_{year}_daily.nc', decode_times=False)\n",
-    "    ds_corrected = process_one_year_from_annual(rain, GPCP_annual_interp)\n",
-    "    ds_corrected['time'] = ds_time['time']\n",
-    "    ds_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
-    "    ds_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily_GPCP1Y.nc', encoding=encoding)"
+    "    precip_corrected['time'] = ds_time['time']\n",
+    "    precip_corrected[\"precip\"].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    precip_corrected.to_netcdf(f'{outdir}/precip_Dussin_corrected_{year}_daily_GPCP1Y.nc',\n",
+    "                               format='NETCDF3_64BIT', encoding=encoding2)\n",
+    "    rain_corrected['time'] = ds_time['time']\n",
+    "    rain_corrected['rain'].attrs = {'valid_min': 0., 'valid_max': 1e-2}\n",
+    "    rain_corrected.to_netcdf(f'{outdir}/rain_Dussin_corrected_{year}_daily_GPCP1Y.nc',\n",
+    "                             format='NETCDF3_64BIT', encoding=encoding)"
    ]
   }
  ],
